work-cards overflow fix. changed the #work height to min-height.

--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ section {
     padding: 50px 0;
     background-color: rgb(250, 252, 253); /* Light grey background */
     text-align: center;
-    height: 95vh;
+    min-height: 95vh;
 }
 
 #work h2 {
@@ -211,7 +211,7 @@ section {
     display: flex;
     flex-wrap: wrap; /* Allows wrapping of cards */
     justify-content: center; /* Centers the cards */
-    gap: 60px 40px; /* Space between cards */
+    gap: 40px 40px; /* Space between cards */
 }
 
 .work-card {
